style.css
/* ... */
.red-line div {
    width: .2vw;
    min-width: 3px;
    height: inherit;
    margin: 0 auto;
    background-color: #dc1e35;
    z-index: 0;
}
.text-block p {
    color: #ffffff;
}

.cutout-bottom{position:absolute; left:0;top:-1px; z-index:100; width:100%;}
.cutout-top{position:absolute; left:0;bottom:1%; z-index:100; width:100%;}
#title {
    position: relative;
    top:-10px;
    width: 100%;
    height: 58vw;
    overflow-y: visible;
    margin: 0 0 20vw 0;

}
#cut-out {
    content: '';
    position: absolute;
    display: block;
    z-index: 10;
    bottom: 0;
    width: 100%;
    height: 25%;
    background: #ffffff;
    -webkit-clip-path: polygon(0 0, 50% 90%, 100% 0, 100% 100%, 0 100%);
    clip-path: polygon(0 0, 50% 90%, 100% 0, 100% 100%, 0 100%);
}
#title .sixty-point {
    color: #ffffff;
}

.fullscreen-bg {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    z-index: -100;

}

#footer .fullscreen-bg {
    width: 102%;
    height: 102%;
    left: -3px;
}

.fullscreen-bg__video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


#success-quote {
    position: relative;
    width: 70%;
    max-width: 1024px;
    margin: 8vw auto;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
}

#success-quote .eighty-point {
    position: relative;
    color: #333e48;
    z-index: 2;
    text-align: center;
    margin-left: -.3em;
}
#success-quote .fourteen-point {
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    align-items: flex-end;
    position: absolute;
    bottom: -6em;
    right: 5em;
    width: 11rem;
    min-width: 100px;
    max-width: 150px;
    height: 11rem;
    min-height: 100px;
    max-height: 150px;
    background-color: #dc1e35;
    color: #ffffff;
    z-index: 1;
    padding: 1.5em;
    line-height: 1.3;
}
#red-block-quote {
    background-color: #dc1e35;
    width: 51%;
    max-width: 780px;
    height: 51vw;
    max-height: 780px;
    margin: 0 auto;
    line-height: 1.4;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 5%;
}
#red-block-quote p {
    color: #ffffff;
}
#exciting {
    width: 80%;
    max-width: 1024px;
    margin: 6vw auto;
    background-color: #ffffff;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: space-around;
}
#exciting .sixty-point {
    color: #333e48;
    align-self: left;
}
#exciting img {
    width: 100%;
    position: relative;
    z-index: 1;
}
#exciting .text-block:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
#exciting .text-block {
    position: absolute;
    right: -2em;
    top: 2em;
    z-index: 2;
    width: 25vw;
    max-width: 19em;
    padding: 1.5em;
    background-color: #333e48;
    transition: box-shadow .5s;
}
#exciting .text-block p {
    color: #ffffff;
    line-height: 1.2;
    margin: .3em;
}
#exciting .container {
    position: relative;
    margin: 2vw 0;
}

#exciting .two-image-container {
    width: 100%;
    margin: 2vw 0 0 0;
    position: relative;
    display: flex;
    display: -webkit-flex;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: space-between;
    justify-content: space-between;
}
#exciting .two-image-container div {
    position: relative;
    width: 45%;
}
#exciting .two-image-container .text-block {
    position: absolute;
    right: -2em;
    width: 25vw;
    max-width: 21em;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-flow: row wrap;
    align-items: flex-start;
}
#white-papers {
    position: relative;
    width: 80%;
    max-width: 1100px;
    margin: 3vw auto;
    background-color: #ffffff;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: column wrap;
    flex-flow: column wrap;
    -webkit-align-items: flex-start;
    align-items: flex-start;
}
#white-papers p {
    display: inline-block;
    color: #333e48;
}

#white-papers .text {z-index: 2}
#white-papers p.two-sixty-six-point {
    margin-right: -5vw;
    color: #c3c5c8;
}
#white-papers .two-image-container {
    position: relative;
    width: 110%;
    max-width: 1100px;
    align-self: center;
    display: flex;
    display: -webkit-flex;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    -webkit-align-items: center;
    align-items: center;
    z-index: 1;
}
#white-papers .two-image-container img {
    width: 100%;
    height: auto;
}
#white-papers .image-1 {
    position: relative;
    width: 50%;
    height: auto;
    bottom: 2vw;
}
#white-papers .image-2 {
    position: relative;
    width: 50%;
    height: auto;
    bottom: 6vw;
}

#pet {
    background-color: #eaeaea;
    width: 100%;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    justify-content: center;
    z-index: 1
}
#pet .image-gallery {
    width: 100%;
    max-width: 1100px;
    padding: 10vw 0 10vw 0.5vw;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-flow: row wrap;
    align-items: center;
}
#pet .image-gallery .image:not(.dog-art) {
    position: relative;
    flex-basis: 23%;
    margin: 0.5vw 0.5vw;
    max-width: 225px;
    max-height: 225px;
}
#pet .image-gallery .dog-art {
    position: relative;
    flex-basis: 23%;
    margin: 0.5vw 0.5vw;
    max-width: 225px;
    max-height: 225px;
}
/* ... */

